# NoReference-Image-Quality-Assesment

./: .gitignore  CMakeLists.txt  README.md
include/: spatialdomain.hpp
src/: main.cpp  spatialdomain.cpp
